--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 [dependencies]
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.49", default-features = false }
+embedded-svc = { version = "0.28", default-features = false }
 anyhow = "1.0.79"
 esp-idf-hal = "0.44.0"
 esp-idf-sys = "0.35.0"
